--- a/libc/CMakeLists.txt
+++ b/libc/CMakeLists.txt
@@ -1,22 +1,25 @@
-MESSAGE(STATUS "Building libc")
+project(clibraries)
+message(STATUS "Building C Libraries.")
 
-# here we set flags specific for libc
-set(LIBC_C_FLAGS "-Wall -Wextra")
-set(LIBC_CPP_FLAGS "-D__is_myos_libc -Iinclude")
-set(LIBK_C_FLAGS "-ffreestanding -fbuiltin")
-set(LIBK_CPP_FLAGS "-D__is_myos_kernel")
+set(LIB_C_C_FLAGS "-isystem=/usr/include -O2 -g -Wall -Wextra -std=gnu11")
+set(LIB_C_CPP_FLAGS "-D__is_myos_libc -Iinclude")
+set(LIB_K_C_FLAGS "-isystem=/usr/include -O2 -g -Wall -Wextra -ffreestanding -fbuiltin")
+set(LIB_K_CPP_FLAGS "-D__is_myos_libc -Iinclude -D__is_myos_kernel")
 
-LOAD_PROFILE("i386")
 
-MESSAGE(STATUS "including directories")
-INCLUDE_DIRECTORIES(include)
+message(STATUS "Building hosted libc.")
+set(CMAKE_C_FLAGS ${LIB_C_C_FLAGS})
+set(CMAKE_CPP_FLAGS ${LIB_C_CPP_FLAGS})
+file(GLOB_RECURSE LIB_C_SRC "*.c")
+add_library(c STATIC ${LIB_C_SRC})
 
-MESSAGE(STATUS "Finding all generic sources")
-FILE(GLOB_RECURSE GENERIC_SRCS "**/*.c" "**/*.s")
-REMOVE_FILES_WITH_PATTERN("${GENERIC_SRCS}" "arch" "GENERIC_SRCS")
-MESSAGE(STATUS ${GENERIC_SRCS})
+message(STATUS "Building free-standing libk.")
+set(CMAKE_C_FLAGS ${LIB_K_C_FLAGS})
+set(CMAKE_CPP_FLAGS ${LIB_K_CPP_FLAGS})
+file(GLOB_RECURSE LIB_K_SRC "*.c")
+add_library(k STATIC ${LIB_K_SRC})
 
-SET(CMAKE_C_FLAGS "${GENERAL_C_FLAGS} ${LIBC_C_FLAGS} ${PLATFORM_C_FLAGS}")
-ADD_DEFINITIONS("${GENERAL_CPP_FLAGS} ${LIBC_CPP_FLAGS} ${PLATFORM_CPP_FLAGS}")
-ADD_EXECUTABLE(libc ${PLATFORM_SRCS} ${GENERIC_SRCS})
-
+target_compile_definitions(c PRIVATE ${LIB_C_CPP_FLAGS})
+target_compile_definitions(k PRIVATE ${LIB_K_CPP_FLAGS})
+add_custom_command(TARGET c POST_BUILD COMMAND "${CMAKE_COMMAND}" -E copy "$<TARGET_FILE:c>" "${CMAKE_SYSROOT}/usr/lib/$<TARGET_FILE_NAME:c>" COMMENT "Copying libc to sysroot.")
+add_custom_command(TARGET k POST_BUILD COMMAND "${CMAKE_COMMAND}" -E copy "$<TARGET_FILE:k>" "${CMAKE_SYSROOT}/usr/lib/$<TARGET_FILE_NAME:k>" COMMENT "Copying libk to sysroot.")
